Simple design for video calling done

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div id="call" class="hidden">
-        <label for="remoteUser">Call</label><input id="remoteUser" value="" name="remoteUser" type="text" placeholder="Remote username"
+        <label for="remoteUser">Call</label><input id="remoteUser" value="" name="remoteUser" type="text" placeholder="Remote username">
         <input type="button" value="Call" onclick="call(document.getElementById('remoteUser').value)" id="connect">
     </div>
     <video class="videobox" width="640" height="480" autoplay id="remoteVideo"></video>
