working on Hanging up the call and closing Peer connection

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,8 +34,10 @@
     </div>
     <video class="videobox" width="640" height="480" autoplay id="remoteVideo"></video>
     <video class="videobox" width="160" height="160" autoplay muted id="localVideo"></video>
-
+<br><br>
+    <button id="dropCall">Hang up</button> <button>Mute my mic</button> <button>Disable my Camera</button>
     <script src="main.js"></script>
+    <script src="functionalities.js"></script>
 </body>
 
 </html>
