Hanging up a call works fine now
When the dropCall function is called the connection is closed and mediaStreams are stopped

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Call</title>
     <style>
+    html {
+            overflow-y: hidden; /* Hide horizontal scrollbar */
+            overflow-x: auto; /* Add vertical scrollbar */
+        }
+    body {
+            min-width: 1220px;
+            transform: scale(1);
+            transform-origin: top;      
+        }
         .hidden {
             display: none;
         }
